# dvel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: RustCore.cmake
cpp-sim/: CMakeLists.txt
cpp-sim/core/: types.hpp
cpp-sim/executables/: sim_tft.cpp
cpp-sim/executables/attacks/: sim_attack_partition.cpp
docs/: bft_design.md  dvel_technical_paper.md  staking_and_slashing.md
examples/: genesis-with-staking.json
include/: dvel_ffi.h
rust-core/: Cargo.toml  Dockerfile
rust-core/benches/: bft_throughput.rs
rust-core/src/: ffi.rs  ledger.rs  lib.rs  mmr.rs  scoring.rs  storage.rs  validation.rs
rust-core/src/bft/: config.rs  http.rs  mod.rs  node.rs  slashing.rs  storage.rs  types.rs
rust-core/tests/: bft_multinode.rs  bft_slashing.rs  ffi_smoke.rs
scripts/: cert_hex.py  dvel_archive.py  dvel_bridge.py  gen_tls_selfsigned.sh  run_local_cluster.py  smoke.sh  test_tx.py
